--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,14 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material-nextjs": "^5.15.11",
+    "i18next": "^23.11.2",
+    "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.2",
+    "next-i18next": "^15.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^14.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
