--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@mui/material-nextjs": "^5.15.11",
     "i18next": "^23.11.2",
     "i18next-browser-languagedetector": "^7.2.1",
+    "i18next-http-backend": "^2.5.1",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.2",
     "next-i18next": "^15.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.1.1"
+    "react-i18next": "^14.1.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
