--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
-          path: frontend
+          path: ./frontend
       - name: Restore cache
         uses: actions/cache@v4
         with:
