--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -58,6 +58,8 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        with:
+          static_site_generator: next
       - name: Restore cache
         uses: actions/cache@v4
         with:
