--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,10 +76,13 @@ jobs:
       - name: Build with Next.js
         run: |
           cd frontend && ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: create out dir
+        run: |
+          cd frontend && makdir /.out
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          path: ./frontend/out
 
   # Deployment job
   deploy:
