--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,11 +78,11 @@ jobs:
           cd frontend && ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: create out dir
         run: |
-          cd frontend && mkdir -p .out
+          mkdir -p .out && cd frontend && mkdir -p .out
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./frontend/out
+          path: ./out
 
   # Deployment job
   deploy:
