--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,13 +76,11 @@ jobs:
       - name: Build with Next.js
         run: |
           cd frontend && ${{ steps.detect-package-manager.outputs.runner }} next build
-      - name: create out dir
-        run: |
-          mkdir -p .out && cd frontend && mkdir -p .out
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./out
+          name: output
+          path: .next/
 
   # Deployment job
   deploy:
