--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,6 +76,10 @@ jobs:
       - name: Build with Next.js
         run: |
           cd frontend && ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: frontend/.next
 
   # Deployment job
   deploy:
