--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.1.1",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
